--- a/local/test2.html
+++ b/local/test2.html
@@ -110,7 +110,7 @@ footer { background:var(--dark); color:white; text-align:center; padding:40px 0;
 </div>
 
 <!-- Floating image bubbles -->
-<div class="bubble" style="top:10%; left:5%;"><img src="images/project1.jpg" alt="Project 1"></div>
+<div class="bubble" style="top:10%; left:5%;"><img src="images/concave.webp" alt="Project 1"></div>
 <div class="bubble" style="top:20%; right:10%;"><img src="images/project2.jpg" alt="Project 2"></div>
 <div class="bubble" style="bottom:15%; left:15%;"><img src="images/project3.jpg" alt="Project 3"></div>
 <div class="bubble" style="bottom:20%; right:20%;"><img src="images/project4.jpg" alt="Project 4"></div>
