--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@ this.nextElementSibling.style.display = "block";
 });
 });
 </script>
+  <a href="https://homerepairs4u.com/local/test2.html" class="btn hero-cta" id="heroBtn">Get Your Free Quote</a>
 <!-- ✅ FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
