--- a/local/test2.html
+++ b/local/test2.html
@@ -23,8 +23,8 @@ body { font-family: 'Segoe UI', sans-serif; background: var(--light); color:#222
 
 /* HEADER */
 header { position:sticky; top:0; background:rgba(15,32,39,0.95); backdrop-filter:blur(10px); z-index:1000; }
-nav { display:flex; justify-content:space-between; align-items:center; padding:20px 0; }
-nav ul { display:flex; list-style:none; gap:30px; }
+nav { display:flex; justify-content:space-between; align-items:center; padding:20px 0; flex-wrap:wrap;}
+nav ul { display:flex; list-style:none; gap:30px; flex-wrap:wrap;}
 nav a { color:white; text-decoration:none; font-weight:500; transition:0.3s; }
 nav a:hover { color:var(--accent); }
 
@@ -65,9 +65,21 @@ transition: opacity 0.8s ease, transform 0.8s ease;
 .fade.show { opacity:1; transform:translateY(0); }
 footer { background:var(--dark); color:white; text-align:center; padding:40px 0; }
 
-@media(max-width:768px){
-.hero h1 { font-size:2.5rem;}
-.counter-container { flex-direction:column; gap:20px;}
+/* MOBILE ADAPTATION */
+@media (max-width:1024px) {
+.hero h1 { font-size:2.8rem; line-height:1.2; }
+.hero p { font-size:1.1rem; }
+.grid { grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:25px; }
+.counter-container { flex-direction:column; gap:20px; }
+.hero-cta, .section .btn { padding:12px 35px; font-size:1rem; }
+.section { padding:60px 15px; }
+.testimonial { width:90%; margin:auto; font-size:1rem; }
+}
+
+@media (max-width:600px) {
+.hero h1 { font-size:2.2rem; }
+.hero p { font-size:1rem; }
+nav ul { flex-direction:column; gap:15px; padding-top:10px; }
 }
 </style>
 </head>
