--- a/local/test2.html
+++ b/local/test2.html
@@ -76,6 +76,10 @@ footer { background:var(--dark); color:white; text-align:center; padding:40px 0;
 .testimonial { width:90%; margin:auto; font-size:1rem; }
 }
 
+@media (max-width:768px) {
+.hero { display:flex; flex-direction:column; justify-content:flex-start; padding-top:80px; height:auto; }
+}
+
 @media (max-width:600px) {
 .hero h1 { font-size:2.2rem; }
 .hero p { font-size:1rem; }
