--- a/local/test2.html
+++ b/local/test2.html
@@ -39,6 +39,11 @@ background-size:400% 400%; animation:gradientMove 12s ease infinite; position:re
 .hero h1 { font-size:3.5rem; font-weight:800; margin-bottom:20px; }
 .hero p { font-size:1.3rem; margin-bottom:35px; }
 
+/* Add spacing below hero container */
+.hero .container {
+margin-bottom: 60px; /* Space between hero button and next section */
+}
+
 /* Fade-in elements */
 .hero-title, .hero-subtitle, .hero-cta {
 opacity:0;
