--- a/local/test2.html
+++ b/local/test2.html
@@ -38,11 +38,7 @@ background-size:400% 400%; animation:gradientMove 12s ease infinite; position:re
 
 .hero h1 { font-size:3.5rem; font-weight:800; margin-bottom:20px; }
 .hero p { font-size:1.3rem; margin-bottom:35px; }
-
-/* Add spacing below hero container */
-.hero .container {
-margin-bottom: 60px; /* Space between hero button and next section */
-}
+.hero .container { margin-bottom:60px; } /* Space below hero for CTA button */
 
 /* Fade-in elements */
 .hero-title, .hero-subtitle, .hero-cta {
@@ -119,14 +115,37 @@ nav ul { flex-direction:column; gap:15px; padding-top:10px; }
 </div>
 </section>
 
-<!-- SERVICES -->
+<!-- SERVICES (4 cards) -->
 <section class="section">
 <div class="container fade">
 <h2 style="text-align:center;font-size:2.5rem;">Our Services</h2>
+
 <div class="grid">
-<div class="card"><img src="images/fence_in_progress.jpg" alt="Fence in progress"><h3>Fencing Installation</h3><p>Strong, secure fencing built to last. See our ongoing projects!</p></div>
-<div class="card"><img src="images/roof_in_progress.jpg" alt="Roof in progress"><h3>Roof Repairs</h3><p>Fast response and durable roofing solutions. We show our work as it happens.</p></div>
-<div class="card"><img src="images/property_in_progress.jpg" alt="Property improvement in progress"><h3>Property Improvements</h3><p>Upgrades that increase value and protection. Authentic projects, no stock photos.</p></div>
+
+<div class="card">
+<img src="images/fence_in_progress.jpg" alt="Fence in progress">
+<h3>Fencing Installation</h3>
+<p>Strong, secure fencing built to last. Built properly and finished clean.</p>
+</div>
+
+<div class="card">
+<img src="images/roof_in_progress.jpg" alt="Roof in progress">
+<h3>Roof Repairs</h3>
+<p>Fast response and durable roofing solutions with no shortcuts.</p>
+</div>
+
+<div class="card">
+<img src="images/property_in_progress.jpg" alt="Property improvement in progress">
+<h3>Property Improvements</h3>
+<p>Upgrades that increase value and protection. Real work. Real results.</p>
+</div>
+
+<div class="card">
+<img src="images/general_repairs.jpg" alt="General repairs in progress">
+<h3>General Repairs</h3>
+<p>Reliable repair work carried out properly the first time. No inflated quotes.</p>
+</div>
+
 </div>
 </div>
 </section>
