--- a/local/test2.html
+++ b/local/test2.html
@@ -135,7 +135,7 @@ nav ul { flex-direction:column; gap:15px; padding-top:10px; }
 </div>
 
 <div class="card">
-<img src="images/property_in_progress.jpg" alt="Property improvement in progress">
+<img src="/images/house-before-after.webp" alt="Property improvement in progress">
 <h3>Property Improvements</h3>
 <p>Upgrades that increase value and protection. Real work. Real results.</p>
 </div>
