--- a/local/test2.html
+++ b/local/test2.html
@@ -4,98 +4,199 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HomeRepairs4U | Built Properly. Priced Fairly. Done Right.</title>
-<meta name="description" content="Professional fencing, roofing and property repairs. Built properly. Priced fairly. Done right. Get your free quote today.">
+<meta name="description" content="Trusted local specialists in fencing, roofing & property repairs. Fully insured. Free written quotes. Built properly and priced fairly.">
 <link rel="canonical" href="https://homerepairs4u.com/">
 
 <style>
-:root {
---primary: #1f3c88;
---dark: #0f2027;
---accent: #ffb703;
---light: #f5f7fa;
---white: #ffffff;
---max-width: 1200px;
+:root{
+--accent:#ffb703;
+--dark:#0f2027;
+--light:#f5f7fa;
+--max:1200px;
 }
-* { margin:0; padding:0; box-sizing:border-box; }
-body { font-family: 'Segoe UI', sans-serif; background: var(--light); color:#222; line-height:1.6; overflow-x:hidden; }
-#progressBar { position:fixed; top:0; left:0; height:4px; background:var(--accent); width:0%; z-index:2000; }
-.container { width:90%; max-width:var(--max-width); margin:auto; }
+
+*{margin:0;padding:0;box-sizing:border-box;}
+body{
+font-family:'Segoe UI',sans-serif;
+background:var(--light);
+color:#222;
+line-height:1.6;
+overflow-x:hidden;
+}
+.container{width:90%;max-width:var(--max);margin:auto;}
 
 /* HEADER */
-header { position:sticky; top:0; background:rgba(15,32,39,0.95); backdrop-filter:blur(10px); z-index:1000; }
-nav { display:flex; justify-content:space-between; align-items:center; padding:20px 0; flex-wrap:wrap;}
-nav ul { display:flex; list-style:none; gap:30px; flex-wrap:wrap;}
-nav a { color:white; text-decoration:none; font-weight:500; transition:0.3s; }
-nav a:hover { color:var(--accent); }
+header{
+position:sticky;
+top:0;
+background:rgba(15,32,39,0.95);
+backdrop-filter:blur(10px);
+z-index:1000;
+}
+nav{
+display:flex;
+justify-content:space-between;
+align-items:center;
+padding:20px 0;
+flex-wrap:wrap;
+}
+nav ul{
+display:flex;
+gap:30px;
+list-style:none;
+flex-wrap:wrap;
+}
+nav a{
+color:white;
+text-decoration:none;
+font-weight:600;
+transition:0.3s;
+}
+nav a:hover{color:var(--accent);}
 
 /* HERO */
-.hero {
-height:100vh; display:flex; align-items:center; justify-content:center; text-align:center; color:white;
-background: linear-gradient(-45deg, #1f3c88, #0f2027, #203a43, #2c5364);
-background-size:400% 400%; animation:gradientMove 12s ease infinite; position:relative; overflow:hidden;
+.hero{
+position:relative;
+min-height:100vh;
+display:flex;
+align-items:center;
+justify-content:center;
+text-align:center;
+color:white;
+background:url('images/work-in-progress.jpg') center/cover no-repeat;
+overflow:hidden;
 }
-@keyframes gradientMove { 0%{background-position:0% 50%;} 50%{background-position:100% 50%;} 100%{background-position:0% 50%;} }
+.hero-overlay{
+position:absolute;
+inset:0;
+background:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.8));
+z-index:1;
+}
+.hero-content{
+position:relative;
+z-index:2;
+padding:140px 0 160px 0;
+}
+.hero h1{
+font-size:4rem;
+font-weight:900;
+letter-spacing:-1px;
+text-transform:uppercase;
+margin-bottom:20px;
+}
+.hero p{
+font-size:1.4rem;
+margin-bottom:40px;
+opacity:0.95;
+}
+.btn{
+background:linear-gradient(45deg,#ffb703,#ff9800);
+padding:18px 55px;
+border-radius:50px;
+font-weight:bold;
+text-decoration:none;
+color:black;
+display:inline-block;
+transition:0.3s;
+}
+.btn:hover{
+transform:translateY(-6px);
+box-shadow:0 20px 40px rgba(0,0,0,0.4);
+}
+.trust-row{
+display:flex;
+flex-wrap:wrap;
+gap:20px;
+justify-content:center;
+margin-top:40px;
+font-weight:600;
+}
+.trust-row span{
+background:rgba(255,255,255,0.1);
+padding:10px 18px;
+border-radius:30px;
+backdrop-filter:blur(6px);
+}
 
-.hero h1 { font-size:3.5rem; font-weight:800; margin-bottom:20px; }
-.hero p { font-size:1.3rem; margin-bottom:35px; }
-.hero .container { margin-bottom:60px; } /* Space below hero for CTA button */
-
-/* Fade-in elements */
-.hero-title, .hero-subtitle, .hero-cta {
+/* FADE */
+.fade{
 opacity:0;
-transform: translateY(20px);
-transition: opacity 0.8s ease, transform 0.8s ease;
+transform:translateY(20px);
+transition:all 0.8s ease;
 }
-.hero-title.show, .hero-subtitle.show, .hero-cta.show { opacity:1; transform:translateY(0); }
-
-/* BUTTON */
-.btn { background:linear-gradient(45deg,#ffb703,#ff9800); padding:15px 45px; border-radius:50px; font-weight:bold; text-decoration:none; color:black; display:inline-block; transition:0.3s; }
-.btn:hover { transform:translateY(-5px); box-shadow:0 15px 30px rgba(0,0,0,0.3); animation:btnPulse 1.5s infinite; }
-@keyframes btnPulse { 0%{ transform:translateY(-5px) scale(1);} 50%{ transform:translateY(-5px) scale(1.05);} 100%{ transform:translateY(-5px) scale(1);} }
-
-/* SECTIONS */
-.section { padding:100px 0; }
-.grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:35px; margin-top:60px; }
-.card { background:rgba(255,255,255,0.6); backdrop-filter:blur(15px); padding:25px; border-radius:20px; transition:0.4s; box-shadow:0 20px 40px rgba(0,0,0,0.08);}
-.card:hover { transform:translateY(-10px); box-shadow:0 30px 60px rgba(0,0,0,0.15); }
-.card img { width:100%; border-radius:15px; margin-bottom:15px; }
-.counter { font-size:3rem; font-weight:800; color:var(--primary); text-align:center; }
-.counter-container { display:flex; justify-content:space-around; align-items:center; margin-top:40px; }
-.testimonial { text-align:center; max-width:700px; margin:auto; font-style:italic; position:relative; }
-.fade { opacity:0; transform:translateY(40px); transition:0.8s ease; }
-.fade.show { opacity:1; transform:translateY(0); }
-footer { background:var(--dark); color:white; text-align:center; padding:40px 0; }
-
-/* MOBILE ADAPTATION */
-@media (max-width:1024px) {
-.hero h1 { font-size:2.8rem; line-height:1.2; }
-.hero p { font-size:1.1rem; }
-.grid { grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:25px; }
-.counter-container { flex-direction:column; gap:20px; }
-.hero-cta, .section .btn { padding:12px 35px; font-size:1rem; }
-.section { padding:60px 15px; }
-.testimonial { width:90%; margin:auto; font-size:1rem; }
+.fade.show{
+opacity:1;
+transform:translateY(0);
 }
 
-@media (max-width:768px) {
-.hero { display:flex; flex-direction:column; justify-content:flex-start; padding-top:80px; height:auto; }
+/* STATS STRIP */
+.stats{
+background:white;
+padding:60px 0;
+box-shadow:0 10px 40px rgba(0,0,0,0.05);
+}
+.stats-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+gap:40px;
+text-align:center;
+}
+.stats h3{
+font-size:2.5rem;
+color:var(--dark);
+}
+.stats p{font-weight:600;}
+
+/* SERVICES */
+.section{padding:100px 0;}
+.grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:35px;
+margin-top:60px;
+}
+.card{
+background:white;
+padding:25px;
+border-radius:20px;
+transition:0.4s;
+box-shadow:0 20px 40px rgba(0,0,0,0.08);
+}
+.card:hover{
+transform:translateY(-10px);
+box-shadow:0 30px 60px rgba(0,0,0,0.15);
+}
+.card img{
+width:100%;
+border-radius:15px;
+margin-bottom:15px;
 }
 
-@media (max-width:600px) {
-.hero h1 { font-size:2.2rem; }
-.hero p { font-size:1rem; }
-nav ul { flex-direction:column; gap:15px; padding-top:10px; }
+/* FOOTER */
+footer{
+background:var(--dark);
+color:white;
+text-align:center;
+padding:40px 0;
+}
+
+/* MOBILE */
+@media(max-width:768px){
+.hero{
+min-height:auto;
+padding-top:120px;
+}
+.hero h1{font-size:2.4rem;}
+.hero p{font-size:1.1rem;}
 }
 </style>
 </head>
 <body>
 
-<div id="progressBar"></div>
-
 <header>
 <div class="container">
 <nav>
-<div style="color:white;font-weight:800;font-size:1.5rem;">HomeRepairs4U</div>
+<div style="color:white;font-weight:800;font-size:1.6rem;">HomeRepairs4U</div>
 <ul>
 <li><a href="/">Home</a></li>
 <li><a href="https://homerepairs4u.com/local/test2.html">Fencing</a></li>
@@ -106,138 +207,107 @@ nav ul { flex-direction:column; gap:15px; padding-top:10px; }
 </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-<div class="container">
-<h1 class="hero-title" id="mainTitle"></h1>
-<p class="hero-subtitle" id="subtitle">No shortcuts. No inflated quotes. Just solid work.</p>
-<a href="https://homerepairs4u.com/local/test2.html" class="btn hero-cta" id="heroBtn">Get Your Free Quote</a>
+<div class="hero-overlay"></div>
+<div class="container hero-content">
+
+<h1 class="fade" id="heroTitle">
+Built Properly. Priced Fairly. Done Right.
+</h1>
+
+<p class="fade" id="heroSubtitle">
+Trusted local specialists in fencing, roofing & property repairs.
+</p>
+
+<a href="https://homerepairs4u.com/local/test2.html"
+class="btn fade"
+id="heroBtn">
+Get Your Free Quote
+</a>
+
+<div class="trust-row fade" id="heroTrust">
+<span>✔ Fully Insured</span>
+<span>✔ Free Written Quotes</span>
+<span>✔ 10+ Years Experience</span>
+<span>✔ Local & Reliable</span>
+</div>
+
 </div>
 </section>
 
-<!-- SERVICES (4 cards) -->
+<section class="stats">
+<div class="container stats-grid">
+<div>
+<h3>300+</h3>
+<p>Projects Completed</p>
+</div>
+<div>
+<h3>10+</h3>
+<p>Years Experience</p>
+</div>
+<div>
+<h3>100%</h3>
+<p>Free Written Quotes</p>
+</div>
+<div>
+<h3>5★</h3>
+<p>Rated Local Service</p>
+</div>
+</div>
+</section>
+
 <section class="section">
-<div class="container fade">
+<div class="container">
 <h2 style="text-align:center;font-size:2.5rem;">Our Services</h2>
 
 <div class="grid">
 
 <div class="card">
-<img src="images/fence_in_progress.jpg" alt="Fence in progress">
+<img src="images/fence.jpg" alt="Fencing work in progress">
 <h3>Fencing Installation</h3>
-<p>Strong, secure fencing built to last. Built properly and finished clean.</p>
+<p>Strong, secure fencing installed properly and built to last.</p>
 </div>
 
 <div class="card">
-<img src="images/roof_in_progress.jpg" alt="Roof in progress">
+<img src="images/roof.jpg" alt="Roof repair work">
 <h3>Roof Repairs</h3>
-<p>Fast response and durable roofing solutions with no shortcuts.</p>
+<p>Reliable roofing solutions with durable materials and no shortcuts.</p>
 </div>
 
 <div class="card">
-<img src="/images/house-before-after.webp" alt="Property improvement in progress">
+<img src="images/property.jpg" alt="Property improvements">
 <h3>Property Improvements</h3>
-<p>Upgrades that increase value and protection. Real work. Real results.</p>
+<p>Professional upgrades that increase safety and property value.</p>
 </div>
 
 <div class="card">
-<img src="images/general_repairs.jpg" alt="General repairs in progress">
+<img src="images/repairs.jpg" alt="General repairs">
 <h3>General Repairs</h3>
-<p>Reliable repair work carried out properly the first time. No inflated quotes.</p>
+<p>Quality repair work completed efficiently and professionally.</p>
 </div>
 
 </div>
-</div>
-</section>
-
-<!-- COUNTERS -->
-<section class="section" style="background:#f5f7fa;">
-<div class="container fade">
-<h2 style="text-align:center;">Our Results</h2>
-<div class="counter-container">
-<div><div class="counter" data-target="500">0</div><p>Projects Completed</p></div>
-<div><div class="counter" data-target="15">0</div><p>Years Experience</p></div>
-<div><div class="counter" data-target="100">0</div><p>% Satisfaction</p></div>
-</div>
-</div>
-</section>
-
-<!-- TESTIMONIALS -->
-<section class="section" style="background:#fff;">
-<div class="container fade">
-<h2 style="text-align:center;">What Customers Say</h2>
-<div class="testimonial" id="testimonial">"Fantastic service. Turned up on time and did a brilliant job."</div>
-</div>
-</section>
-
-<!-- CTA -->
-<section class="section" style="background:var(--primary);color:white;text-align:center;">
-<div class="container fade">
-<h2>Ready To Start?</h2>
-<br>
-<a href="https://homerepairs4u.com/local/test2.html" class="btn">Start Your Quote</a>
 </div>
 </section>
 
 <footer>
 <div class="container">
-<p>&copy; 2026 HomeRepairs4U</p>
+<p>&copy; 2026 HomeRepairs4U. All rights reserved.</p>
 </div>
 </footer>
 
 <script>
-// Scroll progress
-window.onscroll = function(){
-let winScroll = document.body.scrollTop || document.documentElement.scrollTop;
-let height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-let scrolled = (winScroll / height) * 100;
-document.getElementById("progressBar").style.width = scrolled + "%";
-};
+window.addEventListener("DOMContentLoaded", function(){
+const title=document.getElementById("heroTitle");
+const subtitle=document.getElementById("heroSubtitle");
+const btn=document.getElementById("heroBtn");
+const trust=document.getElementById("heroTrust");
 
-// Fade-in on scroll
-const faders = document.querySelectorAll('.fade');
-const appear = new IntersectionObserver(entries=>{entries.forEach(entry=>{if(entry.isIntersecting){entry.target.classList.add('show');}});},{threshold:0.2});
-faders.forEach(fader=>appear.observe(fader));
-
-// Counter animation
-const counters = document.querySelectorAll('.counter');
-counters.forEach(counter=>{
-const update=()=>{
-const target=+counter.getAttribute('data-target');
-const count=+counter.innerText;
-const inc=target/200;
-if(count<target){ counter.innerText=Math.ceil(count+inc); setTimeout(update,10);} else {counter.innerText=target;}
-};
-update();
+setTimeout(()=>{title.classList.add("show");},300);
+setTimeout(()=>{subtitle.classList.add("show");},800);
+setTimeout(()=>{btn.classList.add("show");},1300);
+setTimeout(()=>{trust.classList.add("show");},1800);
 });
-
-// Testimonial slider
-const testimonials=[
-"Fantastic service. Turned up on time and did a brilliant job.",
-"Fair pricing and great workmanship. Highly recommended.",
-"Quick quote and professional finish. Will use again."
-];
-let i=0;
-setInterval(()=>{ i=(i+1)%testimonials.length; document.getElementById("testimonial").innerText=testimonials[i]; },4000);
-
-// Hero sequential typing + fade-in
-const mainTitle = document.getElementById("mainTitle");
-const subtitle = document.getElementById("subtitle");
-const heroBtn = document.getElementById("heroBtn");
-
-const titleText = "Welcome to HomeRepairs4U";
-let idx = 0;
-function typeTitle() {
-if (idx < titleText.length) {
-mainTitle.textContent += titleText[idx];
-idx++;
-setTimeout(typeTitle, 100);
-} else {
-subtitle.classList.add("show");
-setTimeout(()=>heroBtn.classList.add("show"), 800);
-}
-}
-window.addEventListener("DOMContentLoaded", ()=>{ mainTitle.classList.add("show"); typeTitle(); });
 </script>
 
 </body>
