--- a/local/test2.html
+++ b/local/test2.html
@@ -18,8 +18,8 @@
 *{margin:0;padding:0;box-sizing:border-box;}
 body{
 font-family:'Segoe UI',sans-serif;
-background:var(--light);
-color:#222;
+background:#000; /* changed to black */
+color:#fff; /* ensure text is readable */
 line-height:1.6;
 overflow-x:hidden;
 }
@@ -131,7 +131,7 @@ transform:translateY(0);
 
 /* STATS */
 .stats{
-background:white;
+background:#111; /* dark for contrast */
 padding:60px 0;
 box-shadow:0 10px 40px rgba(0,0,0,0.05);
 }
@@ -143,7 +143,7 @@ text-align:center;
 }
 .stats h3{
 font-size:2.5rem;
-color:var(--dark);
+color:#fff;
 }
 .stats p{font-weight:600;}
 
@@ -156,7 +156,7 @@ gap:35px;
 margin-top:60px;
 }
 .card{
-background:white;
+background:#111; /* dark card */
 padding:25px;
 border-radius:20px;
 transition:0.4s;
@@ -184,7 +184,7 @@ padding:40px 0;
 @media(max-width:768px){
 .hero{
 min-height:auto;
-padding-top:120px;
+padding-top:180px; /* pushed hero title higher */
 }
 .hero h1{font-size:2.4rem;}
 .hero p{font-size:1.1rem;}
